apps/media/qbittorrent/qbittorrent-resources.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: qbittorrent
---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: qbittorrent
  labels:
    app: qbittorrent
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - image: lscr.io/linuxserver/qbittorrent:latest
          name: qbittorrent
          ports:
            - containerPort: 8080
              name: WEBUI_PORT
            - containerPort: 6881
              name: TORRENTING_PORT
          environment:
            - name: PUID
              value: 1000
            - name: PGID
              value: 1000
            - name: TZ
              value: "America/Chicago"
            - name: WEBUI_PORT
              value: 8080
            - name: TORRENTING_PORT
              value: 6881
          volumeMounts:
            - name: media-downloads
              mountPath: "/downloads"
            - name: qbit-config
              mountPath: /config
      volumes:
        - name: media-downloads
          persistentVolumeClaim:
            claimName: media-downloads
        - name: qbit-config
          persistentVolumeClaim:
            claimName: qbit-config

---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-ui
  namespace: qbittorrent
  labels:
    app: qbittorrent
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: qbittorrent
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-torrents
  namespace: qbittorrent
  labels:
    app: qbittorrent
spec:
  ports:
    - port: 6881
      protocol: TCP
  selector:
    app: qbittorrent
