apps/media/qbittorrent/qbittorrent-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,192.168.0.0/16,172.20.0.0/12,10.244.0.0/16
spec:
  ingressClassName: nginx
  rules:
  - host: qbittorrent.local.abbottland.io
    http:
      paths:
      - backend:
          service:
            name: qbittorrent
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - qbittorrent.local.abbottland.io
    secretName: qbittorrent-tls
